--- a/android/VirtualTrackpad/app/src/main/res/navigation/nav_graph.xml
+++ b/android/VirtualTrackpad/app/src/main/res/navigation/nav_graph.xml
@@ -19,7 +19,6 @@
     <fragment
         android:id="@+id/settings_fragment"
         android:name="com.example.android.virtualtrackpad.settings.SettingsFragment"
-        android:label="Settings"
-        tools:layout="@layout/fragment_settings" />
+        android:label="Settings" />
 
 </navigation>
