--- a/android/VirtualTrackpad/device_connection/src/main/res/layout/item_device.xml
+++ b/android/VirtualTrackpad/device_connection/src/main/res/layout/item_device.xml
@@ -8,19 +8,36 @@
     android:layout_marginStart="12dp"
     android:layout_marginTop="12dp"
     android:layout_marginEnd="12dp"
-    android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:elevation="12dp"
     android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="12dp">
 
-    <TextView
-        android:id="@+id/device_name"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|start"
-        android:layout_margin="18dp"
-        android:textSize="20sp"
-        tools:text="Device for connection" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/device_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="18dp"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            tools:text="Device for connection" />
+
+        <ProgressBar
+            android:id="@+id/device_progress"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="18dp"
+            android:visibility="gone"
+            tools:visibility="visible" />
+
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
