--- a/android/VirtualTrackpad/settings/src/main/res/layout/item_config.xml
+++ b/android/VirtualTrackpad/settings/src/main/res/layout/item_config.xml
@@ -11,33 +11,41 @@
     android:elevation="12dp"
     app:cardCornerRadius="12dp">
 
-    <TextView
-        android:id="@+id/config_title"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|start"
-        android:layout_margin="18dp"
-        android:textSize="20sp"
-        tools:text="Preview enabled" />
+        android:orientation="horizontal">
 
-    <com.google.android.material.switchmaterial.SwitchMaterial
-        android:id="@+id/config_toggle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|end"
-        android:layout_margin="18dp"
-        android:visibility="gone"
-        tools:visibility="visible" />
+        <TextView
+            android:id="@+id/config_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="18dp"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            tools:text="Preview enabled" />
 
-    <EditText
-        android:id="@+id/config_edit"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|end"
-        android:layout_margin="18dp"
-        android:gravity="center_horizontal"
-        android:inputType="numberDecimal"
-        android:visibility="gone"
-        tools:ignore="Autofill,LabelFor,TextFields" />
+        <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/config_toggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="18dp"
+            android:visibility="gone"
+            tools:visibility="visible" />
+
+        <EditText
+            android:id="@+id/config_edit"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="18dp"
+            android:gravity="center_horizontal"
+            android:inputType="numberDecimal"
+            android:visibility="gone"
+            tools:ignore="Autofill,LabelFor,TextFields" />
+
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
